update: removed swarm secret

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,14 +21,13 @@ services:
     networks:
       - app-network
     environment:
-      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_secret
-    secrets: 
-      - db_secret
+      MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+        #    secrets: 
+        #      - db_secret
 
-
-secrets:
-  db_secret:
-    external: true
+#secrets:
+#  db_secret:
+#    external: true
 
 networks:
   app-network:
